# hindsight-clients/go/model_reprocess_document_response.go
@@ -1,0 +1,214 @@
+/*
+Hindsight HTTP API
+
+HTTP API for Hindsight
+
+API version: 0.5.4
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package hindsight
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the ReprocessDocumentResponse type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &ReprocessDocumentResponse{}
+
+// ReprocessDocumentResponse Response model for reprocess document endpoint.
+type ReprocessDocumentResponse struct {
+	Success bool `json:"success"`
+	OperationId string `json:"operation_id"`
+	ItemsCount int32 `json:"items_count"`
+}
+
+type _ReprocessDocumentResponse ReprocessDocumentResponse
+
+// NewReprocessDocumentResponse instantiates a new ReprocessDocumentResponse object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewReprocessDocumentResponse(success bool, operationId string, itemsCount int32) *ReprocessDocumentResponse {
+	this := ReprocessDocumentResponse{}
+	this.Success = success
+	this.OperationId = operationId
+	this.ItemsCount = itemsCount
+	return &this
+}
+
+// NewReprocessDocumentResponseWithDefaults instantiates a new ReprocessDocumentResponse object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewReprocessDocumentResponseWithDefaults() *ReprocessDocumentResponse {
+	this := ReprocessDocumentResponse{}
+	return &this
+}
+
+// GetSuccess returns the Success field value
+func (o *ReprocessDocumentResponse) GetSuccess() bool {
+	if o == nil {
+		var ret bool
+		return ret
+	}
+
+	return o.Success
+}
+
+// GetSuccessOk returns a tuple with the Success field value
+// and a boolean to check if the value has been set.
+func (o *ReprocessDocumentResponse) GetSuccessOk() (*bool, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Success, true
+}
+
+// SetSuccess sets field value
+func (o *ReprocessDocumentResponse) SetSuccess(v bool) {
+	o.Success = v
+}
+
+// GetOperationId returns the OperationId field value
+func (o *ReprocessDocumentResponse) GetOperationId() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.OperationId
+}
+
+// GetOperationIdOk returns a tuple with the OperationId field value
+// and a boolean to check if the value has been set.
+func (o *ReprocessDocumentResponse) GetOperationIdOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.OperationId, true
+}
+
+// SetOperationId sets field value
+func (o *ReprocessDocumentResponse) SetOperationId(v string) {
+	o.OperationId = v
+}
+
+// GetItemsCount returns the ItemsCount field value
+func (o *ReprocessDocumentResponse) GetItemsCount() int32 {
+	if o == nil {
+		var ret int32
+		return ret
+	}
+
+	return o.ItemsCount
+}
+
+// GetItemsCountOk returns a tuple with the ItemsCount field value
+// and a boolean to check if the value has been set.
+func (o *ReprocessDocumentResponse) GetItemsCountOk() (*int32, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.ItemsCount, true
+}
+
+// SetItemsCount sets field value
+func (o *ReprocessDocumentResponse) SetItemsCount(v int32) {
+	o.ItemsCount = v
+}
+
+func (o ReprocessDocumentResponse) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o ReprocessDocumentResponse) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["success"] = o.Success
+	toSerialize["operation_id"] = o.OperationId
+	toSerialize["items_count"] = o.ItemsCount
+	return toSerialize, nil
+}
+
+func (o *ReprocessDocumentResponse) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"success",
+		"operation_id",
+		"items_count",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varReprocessDocumentResponse := _ReprocessDocumentResponse{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varReprocessDocumentResponse)
+
+	if err != nil {
+		return err
+	}
+
+	*o = ReprocessDocumentResponse(varReprocessDocumentResponse)
+
+	return err
+}
+
+type NullableReprocessDocumentResponse struct {
+	value *ReprocessDocumentResponse
+	isSet bool
+}
+
+func (v NullableReprocessDocumentResponse) Get() *ReprocessDocumentResponse {
+	return v.value
+}
+
+func (v *NullableReprocessDocumentResponse) Set(val *ReprocessDocumentResponse) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableReprocessDocumentResponse) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableReprocessDocumentResponse) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableReprocessDocumentResponse(val *ReprocessDocumentResponse) *NullableReprocessDocumentResponse {
+	return &NullableReprocessDocumentResponse{value: val, isSet: true}
+}
+
+func (v NullableReprocessDocumentResponse) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableReprocessDocumentResponse) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
